--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,11 @@ body {
 .header {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 2fr;
+    align-items: center;
+    padding: 0.5rem 2rem;
 }
 
 ul {
@@ -59,4 +64,46 @@ img {
     display: flex;
     align-items: center;
     gap: 0.5rem;
+}
+
+.search-container {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+
+.search-field {
+    height: 1.5rem;
+    flex: 1;
+    border-radius: 20px;
+    border: none;
+    background-color: #e4ddf4;
+}
+
+.profile-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.user-profile {
+    border-radius: 50%;
+    height: 3rem;
+    width: 3rem;
+}
+
+.welcome-container {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0.5rem 1rem;
+}
+
+.large-profile-image {
+    height: 5rem;
+    width: 5rem;
+    border-radius: 50%;
+    grid-row: 1 / 3;
+    align-self: center;
 }
