--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,10 @@
 body {
     height: 100vh;
+    min-height: 100%;
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 :root {
@@ -15,7 +19,7 @@ body {
     height: 100vh;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: auto 4fr;
 }
 
 .side-bar {
@@ -32,6 +36,10 @@ body {
     background-color: lightgray;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    padding: 1rem 2rem;
+    gap: 1rem;
 }
 
 .header {
@@ -134,4 +142,74 @@ button {
     color: white;
     font-weight: bold;
     font-size: 1rem;
+}
+
+.projects {
+    display: grid;
+    grid-template-rows: auto 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-auto-rows: 1fr;
+    gap: 2rem 1rem;
+
+}
+.h3-projects-title {
+    margin-bottom: -1.5rem;
+    margin-top: 0;
+    grid-column: 1 / -1;
+    font-size: 1.4rem;
+}
+
+.project {
+    background-color: white;
+    border-radius: 15px;
+}
+
+.trending-announcements {
+    display: grid;
+    gap: 1rem;
+    grid-template-rows: 1fr 1fr;
+}
+
+.announcements {
+    display: flex;
+    flex-direction: column;
+}
+
+.announce-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 15px;
+    padding: 1rem 2rem;
+}
+
+.announcements > h3 {
+    margin: 0;
+    margin-bottom: 0.5rem;
+    grid-column: 1 / -1;
+    font-size: 1.4rem;
+}
+
+ .trending-content {
+    flex: 1;
+    background-color: white;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 2rem;
+    /* justify-content: space-around;
+    align-items: flex-start; */
+} 
+
+.trending > h3 {
+    margin: 0;
+    margin-bottom: 0.5rem;
+    font-size: 1.4rem;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
 }
